--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,4 @@
 remote_theme: chrisrhymes/bulma-clean-theme
 title: Stripe Payment Link Generator
 show_downloads: true
+google_analytics: UA-164274503-1
